CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(TellStickNet C)

SET(TCPIP_USE_ETH97J60 TRUE)
SET(TCPIP_USE_HASHES TRUE)
SET(TCPIP_USE_UDP TRUE)
SET(TCPIP_USE_DHCP TRUE)
SET(TCPIP_USE_DNS TRUE)
SET(TCPIP_USE_REBOOT TRUE)
SET(TCPIP_USE_TCP TRUE)

SET(CMAKE_MODULE_PATH
	"${CMAKE_SOURCE_DIR}/../cmake"
	"${CMAKE_SOURCE_DIR}/../tcpip"
	"${CMAKE_SOURCE_DIR}/../rf"
)
FIND_PACKAGE( PICC18 REQUIRED )
FIND_PACKAGE( TCPIP REQUIRED )
FIND_PACKAGE( RF REQUIRED )

SET(SOURCES
	common.c
	discovery.c
	eeprom.c
	livemessage.c
	localaccess.c
	main.c
	message.c
	pwm.c
	rf.c
	send.c
	tellsticknet.c
)

IF(DEBUG)
	LIST(APPEND SOURCES debug.c)
ENDIF(DEBUG)

SET(DEBUG FALSE CACHE BOOL "Build in debug mode")

CONFIGURE_FILE(
	${CMAKE_SOURCE_DIR}/config.h.in
	${CMAKE_BINARY_DIR}/parsed/config.h
)

LIST(APPEND CMAKE_EXE_LINKER_FLAGS "--runtime=+plib")
LIST(APPEND CMAKE_C_FLAGS "--runtime=+plib")
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/parsed")

ADD_HEX(TellStickNet 18F67J60
	${SOURCES}
	${RF_SOURCES}
	${TCPIP_SOURCES}
)

TCPIP_BOOTLOAD(TellStickNet)
